--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.3",
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
