--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/websockets": "^11.1.3",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "passport": "^0.7.0",
